[metadata]
# These need to be here as long as we're building wheels for Python 3.6.
# The version of python-build that Pip installs for 3.6 does not know
# to look in pyproject.toml.
name = tracktable
version = 1.7.1
maintainer = "Andy Wilson"
maintainer_email = "atwilso@sandia.gov"

[options]
include_package_data = True
packages = find:
package_dir = 
   = Python
zip_safe = False

[options.packages.find]
where = Python

# These are superseded by MANIFEST.in
[options.package_data]
* = 
   *.md
   *.txt
   *.ipynb
   *.png
   *.dll
   *.pyd
   *.so
   *.dylib
